--- a/Operator Aritmatika/Operator Logika.html
+++ b/Operator Aritmatika/Operator Logika.html
@@ -16,7 +16,12 @@
 
         const lulus = lulusUjian && lulusAbsensi;
         document.writeln(lulus);
+        // && = And
+        // || = OR
+        // ! = NOT
      </script>
     
 </body>
 </html>
+
+
